# XSBench

./: CMakeLists.txt
cuda/: CMakeLists.txt  GridInit.cu  Main.cu  Simulation.cu  XSbench_header.cuh  io.cu
openmp-threading/: CMakeLists.txt  GridInit.c  Main.c  Simulation.c  XSbench_header.h  io.c
